# willow

./: .clang-format  .ecrc  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  NOTES.md  README.md  container.gitconfig  multinet.awk  partitions.csv  partitions_esp32.csv  partitions_sallow.csv  partitions_willow.csv  screenrc  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3  sdkconfig.local  sdkconfig.old  sdkconfig.sallow  sdkconfig.willow  utils.sh
.github/workflows/: build-and-publish.yml  build-container.yml  build-dist.yml  build-willow.yml  clang-format.yml  code-formatting.yml  meta.yml  publish-release.yml
components/: .gitignore
components/audio_flash_tone/: CMakeLists.txt  audio_tone_uri.c  audio_tone_uri.h  component.mk
components/espressif__esp-box-3/: .component_hash  CMakeLists.txt  Kconfig  README.md  esp-box-3.c  esp-box-3_idf4.c  esp-box-3_idf5.c  idf_component.yml
components/espressif__esp-box-3/include/bsp/: display.h  esp-box-3.h  esp-bsp.h  touch.h
components/espressif__esp-box-3/priv_include/: bsp_err_check.h
ha/: test_ha.py
main/: CMakeLists.txt  Kconfig-TZ.projbuild  Kconfig.projbuild  audio.c  audio.h  config.c  config.h  display.c  display.h  hass.c  hass.h  http.c  http.h  i2c.c  i2c.h  i2s.c  i2s.h  idf_component.yml  input.c  input.h  log.c  log.h  lv_img_hand_left.c  main.c  network.c  network.h  ota.c  ota.h  record_raw_http.c  shared.h  slvgl.c  slvgl.h  system.c  system.h  tasks.c  tasks.h  test.c  test2.c  test3.c  test_gpio.c  (+7 more)
main/endpoint/: hass.c  hass.h  openhab.c  openhab.h  rest.c  rest.h
main/net/: ethernet.c  ethernet.h
misc/: hi_esp_this_is_a_test_command.flac  hi_esp_turn_off_dining_room.flac  http_rest_client_test.py  torture.awk
patches/: esp-adf-multinet6.patch  esp-adf-willow-ua.patch  esp-sr-warning.patch
speech_commands/: generate_commands.py
spiffs/audio/: echo_en_ok.flac  error.flac  wake.flac
spiffs/user/audio/: success.flac
